fixed a minor bug, increased visibility for easier development

--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -6,6 +6,8 @@
     --white: #fff;
     --black: #000;
     --red: #ff0000;
+    --green: #008000;
+    --blue: #0000ff;
     --light-grey: #eae7e6;
     --dark-grey: #57605f;
     --orange: #bf5700;
@@ -18,6 +20,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    font-family: sans-serif; /* temporary */
 }
 
 body {
@@ -32,13 +36,12 @@ header {
 }
 
 .banner {
-    background-color: var(--white);
+    background-color: var(--white); 
     margin: 1px;
     padding: 1em;
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .banner div {
@@ -51,33 +54,35 @@ header {
     font-size: 25px;
 }
 
+
 /* FIXME: left */
 #bannerLeft {
-    border: 2px solid var(--red);
+    border: 2px solid var(--red); /* temporary */
 }
 
 #logo {
     max-width: 200px;
     max-height: 100px;
-    border: 2px solid var(--red);
+    border: 2px solid var(--red); /* temporary */
 }
 
 #name {
-    border: 2px solid var(--red);
+    border: 2px solid var(--red); /* temporary */
 }
 
 
 /* FIXME: middle */
 #bannerMiddle {
-    border: 2px solid var(--red);
+    border: 2px solid var(--green); /* temporary */
 }
 
 
 /* FIXME: right */
 #bannerRight {
-    border: 2px solid var(--red);
+    border: 2px solid var(--red); /* temporary */
     min-width: 200px;
 }
+
 
 /* Main Content
 ------------------------------------------------------------------------------- */
@@ -86,7 +91,6 @@ header {
     align-items: center;
     flex-direction: column;
 
-    
     max-width: 900px;
     margin: 1px auto;
     padding: 1px;
@@ -101,11 +105,17 @@ header {
 }
 
 .contentContainer {
-
-
+    margin: 1px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--blue); /* temporary */
 }
 
-
+#biggerLogoWrapper {
+    width: 100%; /* temporary, erase it later to fix stretched logo */
+    max-height: 200px;
+    margin: 1em;
+}
 
 /* Footer
 ------------------------------------------------------------------------------- */
